# cpp-calendar

./: CMakeLists.txt  Readme.md  main.cpp
gui/: DigitalTime.cpp  DigitalTime.h  MainWindow.cpp  MainWindow.h
timeclass/: date.cpp  date.h  myTime.cpp  myTime.h
